deployments/kubernetes/dev/gateway/etcd-for-apisix.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: etcd
  labels:
    app: etcd
spec:
  serviceName: etcd-service
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: etcd
          image: bitnami/etcd:3.5.21
          ports:
            - containerPort: 2379
              name: client
            - containerPort: 2380
              name: peer
          resources:
            limits:
              cpu: '500m'
              memory: '512Mi'
            requests:
              cpu: '100m'
              memory: '256Mi'
          readinessProbe:
            exec:
              command:
                - etcdctl
                - endpoint
                - health
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command:
                - etcdctl
                - endpoint
                - health
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
          volumeMounts:
            - name: etcd-data
              mountPath: /bitnami/etcd
  volumeClaimTemplates:
    - metadata:
        name: etcd-data
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-service
spec:
  selector:
    app: etcd
  ports:
    - port: 2379
      name: client
      targetPort: 2379
    - port: 2380
      name: peer
      targetPort: 2380
