deployments/kubernetes/dev/gateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apisix-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  rules:
    - host: gateway.local.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: apisix-gateway
                port:
                  number: 9080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apisix-dashboard
                port:
                  number: 9000
